samples/_failures_safe/1761469039_f7e65a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5ea015c3.c: In function ‘main’:
./samples/SAFE/__tmp_5ea015c3.c:143:16: error: missing terminating " character
  143 |         printf("  Transformed: (%.3f, %.3f, %.3f) magnitude: %.3f
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_5ea015c3.c:143:9: error: expected expression at end of input
  143 |         printf("  Transformed: (%.3f, %.3f, %.3f) magnitude: %.3f
      |         ^~~~~~
./samples/SAFE/__tmp_5ea015c3.c:143:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5ea015c3.c:143:9: error: expected declaration or statement at end of input
